# docs/swagger.json
@@ -266,12 +266,39 @@
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "type": "object"
-                        }
+                        "schema": {}
                     },
                     "201": {
                         "description": "Created"
+                    }
+                }
+            }
+        },
+        "/api/v1/procedures": {
+            "get": {
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "process",
+                    "procedures",
+                    "druid",
+                    "daemon"
+                ],
+                "summary": "Get process procedure statuses",
+                "operationId": "getProcedures",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "$ref": "#/definitions/domain.ScrollLockStatus"
+                            }
+                        }
                     }
                 }
             }
@@ -466,6 +493,9 @@
                 "id": {
                     "type": "string"
                 },
+                "ignore_failure": {
+                    "type": "boolean"
+                },
                 "mode": {
                     "type": "string"
                 },
@@ -496,47 +526,6 @@
             "type": "object",
             "additionalProperties": {
                 "$ref": "#/definitions/ProcessMonitorMetrics"
-            }
-        },
-        "ProcessTreeNode": {
-            "type": "object",
-            "properties": {
-                "children": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/ProcessTreeNode"
-                    }
-                },
-                "cmdline": {
-                    "type": "string"
-                },
-                "cpu_percent": {
-                    "type": "number"
-                },
-                "gids": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "io_counters": {
-                    "type": "string"
-                },
-                "memory": {
-                    "type": "string"
-                },
-                "memory_ex": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "process": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
             }
         },
         "ProcessTreeRoot": {
@@ -599,6 +588,9 @@
                 "init": {
                     "type": "string"
                 },
+                "keepAlivePPM": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -654,6 +646,9 @@
         "domain.AugmentedPort": {
             "type": "object",
             "properties": {
+                "finish_after_command": {
+                    "type": "string"
+                },
                 "inactive_since": {
                     "type": "string"
                 },
@@ -730,6 +725,9 @@
         "domain.Port": {
             "type": "object",
             "properties": {
+                "finish_after_command": {
+                    "type": "string"
+                },
                 "mandatory": {
                     "type": "boolean"
                 },
@@ -763,6 +761,47 @@
                     "type": "string"
                 },
                 "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.ProcessTreeNode": {
+            "type": "object",
+            "properties": {
+                "children": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.ProcessTreeNode"
+                    }
+                },
+                "cmdline": {
+                    "type": "string"
+                },
+                "cpu_percent": {
+                    "type": "number"
+                },
+                "gids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "io_counters": {
+                    "type": "string"
+                },
+                "memory": {
+                    "type": "string"
+                },
+                "memory_ex": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "process": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
