# internal/handler/scroll_handler.go
@@ -145,3 +145,15 @@ func (sl ScrollHandler) RunProcedure(c *fiber.Ctx) error {
 		return c.JSON(res)
 	}
 }
+
+// @Summary Get process procedure statuses
+// @ID getProcedures
+// @Tags process, procedures, druid, daemon
+// @Accept */*
+// @Produce json
+// @Success 200 {object} map[string]domain.ScrollLockStatus
+// @Router /api/v1/procedures [get]
+func (sh ScrollHandler) Procedures(c *fiber.Ctx) error {
+	process := sh.ProcessLauncher.GetProcedureStatuses()
+	return c.JSON(process)
+}
